--- a/estilo.css
+++ b/estilo.css
@@ -222,11 +222,12 @@ html {
 
 .avaliacoes .card_avaliacoes {
     display: grid;
-    width: 25%;
+    max-width: 25%;
     height: 300px;
     min-width: 290px;
     color: white;
     margin: 15px;
+    padding: 20px 0px;
 }
 
 .avaliacoes .card_avaliacoes .icon {
@@ -262,6 +263,7 @@ html {
 #comentarios .titulo {
     font-size: 2.3rem;
     margin-top: 20px;
+    min-width: 300px;
 }
 
 #comentarios .aspas {
@@ -272,10 +274,10 @@ html {
 }
 
 #comentarios h4 {
-    width: 600px;
+    min-width: 300px;
+    max-width: 600px;
     text-align: center;
 }
-
 
 #comentarios a {
     margin: 20px;
