--- a/estilo.css
+++ b/estilo.css
@@ -9,6 +9,10 @@
     margin: 0;
 }
 
+#min_menu {
+    display: none;
+}
+
 html {
     scroll-behavior: smooth;
 }
@@ -181,13 +185,6 @@ html {
 
 /* Avalie nos */
 
-.avaliacoes img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    filter: blur(2px);
-}
-
 .avaliacoes {
     width: 100%;
     height: auto;
@@ -211,10 +208,10 @@ html {
 
 .avaliacoes .conteiner-cards{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: initial;
     flex-wrap: wrap;
-    width: 100%;
+    width: auto;
     height: 100%;
     padding: 0px 100px;
     background: linear-gradient(to top, rgba(0, 0, 0, .8),rgba(0, 0, 0, .5), transparent);
@@ -275,6 +272,7 @@ html {
 
 #comentarios h4 {
     max-width: 600px;
+    width: auto;
     text-align: center;
 }
 
