--- a/responsivo.css
+++ b/responsivo.css
@@ -12,6 +12,7 @@
         width: 50px;
         font-size: 2rem;
         color: white;
+        cursor: pointer;
     }
 
     .avaliacoes .conteiner-cards {
