--- a/responsivo.css
+++ b/responsivo.css
@@ -1,11 +1,35 @@
-@media (max-width: 550px) {
+@media (max-width: 700px) {
     #header {
         width: 100%;
         justify-content: space-between;
         padding: 5px;
     }
     #header .menu {
-        display: none;
+        position: absolute;
+        width: 0;
+        height: 0;
+        top: 0;
+        right: 0;
+        overflow: hidden;
+        visibility: hidden;
+        transition: .6s;
+    }
+    #header.active .menu {
+        visibility: visible;
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100vh;
+        padding: 70px 20px;
+        background: #e7e7e7;
+    }
+    #header.active #min_menu {
+        color: black;
+    }
+    #header.active .menu a {
+        display: block;
+        color: black;
     }
     #min_menu {
         display: flex;
